--- a/Enyim.Caching.Tests/App.config
+++ b/Enyim.Caching.Tests/App.config
@@ -1,42 +1,42 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
-		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
 
 		<sectionGroup name="enyim.com">
-			<section name="log" type="Enyim.Caching.Configuration.LoggerSection, Enyim.Caching" />
-			<section name="memcached" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching" />
+			<section name="log" type="Enyim.Caching.Configuration.LoggerSection, Enyim.Caching"/>
+			<section name="memcached" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching"/>
 		</sectionGroup>
 
 		<sectionGroup name="test">
 
-			<section name="memcachedPerfMonWithType" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching" />
-			<section name="memcachedPerfMonWithFactory" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching" />
-			<section name="membasePerfMon" type="Membase.Configuration.MembaseClientSection, Membase" />
+			<section name="memcachedPerfMonWithType" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching"/>
+			<section name="memcachedPerfMonWithFactory" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching"/>
+			<section name="membasePerfMon" type="Membase.Configuration.MembaseClientSection, Membase"/>
 
-			<section name="newProviders" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching" />
-			<section name="newProvidersWithFactory" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching" />
+			<section name="newProviders" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching"/>
+			<section name="newProvidersWithFactory" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching"/>
 
-			<section name="vbucket" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching" />
+			<section name="vbucket" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching"/>
 
-			<section name="validConfig" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching" />
-			<section name="textConfig" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching" />
-			<section name="binaryConfig" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching" />
+			<section name="validConfig" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching"/>
+			<section name="textConfig" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching"/>
+			<section name="binaryConfig" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching"/>
 
-			<section name="mbmcb" type="Membase.Configuration.MembaseClientSection, Membase" />
-			<section name="membase" type="Membase.Configuration.MembaseClientSection, Membase" />
+			<section name="mbmcb" type="Membase.Configuration.MembaseClientSection, Membase"/>
+			<section name="membase" type="Membase.Configuration.MembaseClientSection, Membase"/>
 
-			<section name="throttlingFailurePolicy" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching" />
+			<section name="throttlingFailurePolicy" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching"/>
 		</sectionGroup>
 	</configSections>
 	<enyim.com>
-		<log factory="Enyim.Caching.Log4NetFactory, Enyim.Caching.Log4NetAdapter" />
+		<log factory="Enyim.Caching.Log4NetFactory, Enyim.Caching.Log4NetAdapter"/>
 		<memcached>
 			<servers>
-				<add address="127.0.0.1" port="11211" />
-				<add address="127.0.0.1" port="11212" />
+				<add address="127.0.0.1" port="11211"/>
+				<add address="127.0.0.1" port="11212"/>
 			</servers>
-			<socketPool keepAliveInterval="00:00:04" keepAliveStartFrom="00:00:04" />
+			<socketPool keepAliveInterval="00:00:04" keepAliveStartFrom="00:00:04"/>
 		</memcached>
 	</enyim.com>
 
@@ -44,44 +44,44 @@
 
 		<memcachedPerfMonWithType>
 			<servers>
-				<add address="127.0.0.1" port="11211" />
+				<add address="127.0.0.1" port="11211"/>
 			</servers>
-			<performanceMonitor factory="MemcachedTest.TestMemcachedPerfMonFactory, Enyim.Caching.Tests" test="1" />
+			<performanceMonitor factory="MemcachedTest.TestMemcachedPerfMonFactory, Enyim.Caching.Tests" test="1"/>
 		</memcachedPerfMonWithType>
 		<memcachedPerfMonWithFactory>
 			<servers>
-				<add address="127.0.0.1" port="11211" />
+				<add address="127.0.0.1" port="11211"/>
 			</servers>
-			<performanceMonitor type="MemcachedTest.TestPerfMon, Enyim.Caching.Tests" test="1" />
+			<performanceMonitor type="MemcachedTest.TestPerfMon, Enyim.Caching.Tests" test="1"/>
 		</memcachedPerfMonWithFactory>
 
 		<!-- type vs factory test -->
 
 		<newProviders>
 			<servers>
-				<add address="127.0.0.1" port="11211" />
+				<add address="127.0.0.1" port="11211"/>
 			</servers>
-			<keyTransformer type="MemcachedTest.TestKeyTransformer, Enyim.Caching.Tests" test="value" />
-			<locator type="MemcachedTest.TestLocator, Enyim.Caching.Tests" test="value" />
-			<transcoder type="MemcachedTest.TestTranscoder, Enyim.Caching.Tests" test="value" />
+			<keyTransformer type="MemcachedTest.TestKeyTransformer, Enyim.Caching.Tests" test="value"/>
+			<locator type="MemcachedTest.TestLocator, Enyim.Caching.Tests" test="value"/>
+			<transcoder type="MemcachedTest.TestTranscoder, Enyim.Caching.Tests" test="value"/>
 		</newProviders>
 
 		<newProvidersWithFactory>
 			<servers>
-				<add address="127.0.0.1" port="11211" />
+				<add address="127.0.0.1" port="11211"/>
 			</servers>
-			<keyTransformer factory="MemcachedTest.TestKeyTransformerFactory, Enyim.Caching.Tests" test="value" type="Enyim.Caching.Memcached.TigerHashKeyTransformer, Enyim.Caching" />
-			<locator factory="MemcachedTest.TestLocatorFactory, Enyim.Caching.Tests" test="value" type="Enyim.Caching.Memcached.KetamaNodeLocator, Enyim.Caching" />
-			<transcoder factory="MemcachedTest.TestTranscoderFactory, Enyim.Caching.Tests" test="value" type="Enyim.Caching.Memcached.DefaultTranscoder, Enyim.Caching" />
+			<keyTransformer factory="MemcachedTest.TestKeyTransformerFactory, Enyim.Caching.Tests" test="value" type="Enyim.Caching.Memcached.TigerHashKeyTransformer, Enyim.Caching"/>
+			<locator factory="MemcachedTest.TestLocatorFactory, Enyim.Caching.Tests" test="value" type="Enyim.Caching.Memcached.KetamaNodeLocator, Enyim.Caching"/>
+			<transcoder factory="MemcachedTest.TestTranscoderFactory, Enyim.Caching.Tests" test="value" type="Enyim.Caching.Memcached.DefaultTranscoder, Enyim.Caching"/>
 		</newProvidersWithFactory>
 
 		<!-- end of type vs factory test -->
 
 		<vbucket>
 			<servers>
-				<add address="server1" port="11211" />
-				<add address="server2" port="11210" />
-				<add address="server3" port="11211" />
+				<add address="server1" port="11211"/>
+				<add address="server2" port="11210"/>
+				<add address="server3" port="11211"/>
 			</servers>
 			<locator factory="Enyim.Caching.Memcached.VBucketNodeLocatorFactory, Enyim.Caching" hashAlgorithm="crc">
 				<data>
@@ -97,34 +97,34 @@
 
 		<binaryConfig protocol="Binary">
 			<servers>
-				<add address="127.0.0.1" port="11211" />
-				<add address="127.0.0.1" port="11212" />
+				<add address="127.0.0.1" port="11211"/>
+				<add address="127.0.0.1" port="11212"/>
 			</servers>
-			<socketPool keepAliveInterval="00:00:04" keepAliveStartFrom="00:00:04" />
+			<socketPool keepAliveInterval="00:00:04" keepAliveStartFrom="00:00:04"/>
 		</binaryConfig>
 
 		<textConfig protocol="Text">
 			<servers>
-				<add address="127.0.0.1" port="11211" />
-				<add address="127.0.0.1" port="11212" />
+				<add address="127.0.0.1" port="11211"/>
+				<add address="127.0.0.1" port="11212"/>
 			</servers>
-			<socketPool keepAliveInterval="00:00:04" keepAliveStartFrom="00:00:04" />
+			<socketPool keepAliveInterval="00:00:04" keepAliveStartFrom="00:00:04"/>
 		</textConfig>
 
 		<validConfig>
 			<servers>
-				<add address="127.0.0.1" port="11211" />
-				<add address="127.0.0.1" port="11212" />
+				<add address="127.0.0.1" port="11211"/>
+				<add address="127.0.0.1" port="11212"/>
 			</servers>
-			<socketPool minPoolSize="12" maxPoolSize="48" connectionTimeout="00:12:34" queueTimeout="00:12:34" receiveTimeout="00:12:34" keepAliveInterval="00:12:34" keepAliveStartFrom="00:12:34" deadTimeout="00:12:34" />
+			<socketPool minPoolSize="12" maxPoolSize="48" connectionTimeout="00:12:34" queueTimeout="00:12:34" receiveTimeout="00:12:34" keepAliveInterval="00:12:34" keepAliveStartFrom="00:12:34" deadTimeout="00:12:34"/>
 		</validConfig>
 
 		<throttlingFailurePolicy>
 			<servers>
-				<add address="127.0.0.1" port="11211" />
+				<add address="127.0.0.1" port="11211"/>
 			</servers>
 			<socketPool>
-				<failurePolicyFactory factory="Enyim.Caching.Memcached.ThrottlingFailurePolicyFactory, Enyim.Caching" resetAfter="00:00:00.100" failureThreshold="10" />
+				<failurePolicyFactory factory="Enyim.Caching.Memcached.ThrottlingFailurePolicyFactory, Enyim.Caching" resetAfter="00:00:00.100" failureThreshold="10"/>
 			</socketPool>
 		</throttlingFailurePolicy>
 
@@ -139,19 +139,19 @@
 	<log4net>
 		<appender name="TraceAppender" type="log4net.Appender.TraceAppender">
 			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date [%thread] %-5level %logger %message%newline" />
+				<conversionPattern value="%date [%thread] %-5level %logger %message%newline"/>
 			</layout>
 		</appender>
 
 		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
 			<layout type="log4net.Layout.PatternLayout,log4net">
-				<param name="ConversionPattern" value="%d [%t] %-5p %c %m%n" />
+				<param name="ConversionPattern" value="%d [%t] %-5p %c %m%n"/>
 			</layout>
 		</appender>
 
-		<appender name="OutputDebugStringAppender" type="log4net.Appender.OutputDebugStringAppender" >
+		<appender name="OutputDebugStringAppender" type="log4net.Appender.OutputDebugStringAppender">
 			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date [%thread] %-5level %logger %message%newline" />
+				<conversionPattern value="%date [%thread] %-5level %logger %message%newline"/>
 			</layout>
 		</appender>
 
@@ -179,13 +179,13 @@
 
 			<dependentAssembly>
 
-				<assemblyIdentity name="nunit.framework" publicKeyToken="96d09a1eb7f44a77" culture="neutral" />
+				<assemblyIdentity name="nunit.framework" publicKeyToken="96d09a1eb7f44a77" culture="neutral"/>
 
-				<bindingRedirect oldVersion="0.0.0.0-2.6.4.14350" newVersion="2.6.4.14350" />
+				<bindingRedirect oldVersion="0.0.0.0-2.6.4.14350" newVersion="2.6.4.14350"/>
 
 			</dependentAssembly>
 
 		</assemblyBinding>
 
 	</runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup></configuration>
